WebCore: <rdar://problem/7138591> and https://bugs.webkit.org/show_bug.cgi?id=28260 onhashchange property cannot be set from javascript.

Reviewed by Eric Seidel.

Test: fast/loader/onhashchange-attribute-listeners.html

* html/HTMLBodyElement.cpp:
(WebCore::HTMLBodyElement::onhashchange):
(WebCore::HTMLBodyElement::setOnhashchange):
* html/HTMLBodyElement.h:
* html/HTMLBodyElement.idl:

* html/HTMLFrameSetElement.cpp:
(WebCore::HTMLFrameSetElement::onhashchange):
(WebCore::HTMLFrameSetElement::setOnhashchange):
* html/HTMLFrameSetElement.h:
* html/HTMLFrameSetElement.idl:

* page/DOMWindow.cpp:
(WebCore::DOMWindow::onhashchange):
(WebCore::DOMWindow::setOnhashchange):
* page/DOMWindow.h:
* page/DOMWindow.idl:

LayoutTests: <rdar://problem/7138591> and https://bugs.webkit.org/show_bug.cgi?id=28260
onhashchange property cannot be set from javascript.

Reviewed by Eric Seidel.

* fast/dom/Window/window-properties-expected.txt:
* fast/loader/onhashchange-attribute-listeners-expected.txt: Added.
* fast/loader/onhashchange-attribute-listeners.html: Added.



Canonical link: https://commits.webkit.org/38834@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47233 268f45cc-cd09-0410-ab3c-d52691b4dbfc