WebCore/page/DOMWindow.cpp
@@ -1555,6 +1555,16 @@ void DOMWindow::setOnfocus(PassRefPtr<EventListener> eventListener)
     setAttributeEventListener(eventNames().focusEvent, eventListener);
 }
 
+EventListener* DOMWindow::onhashchange() const
+{
+    return getAttributeEventListener(eventNames().hashchangeEvent);
+}
+
+void DOMWindow::setOnhashchange(PassRefPtr<EventListener> eventListener)
+{
+    setAttributeEventListener(eventNames().hashchangeEvent, eventListener);
+}
+
 EventListener* DOMWindow::onkeydown() const
 {
     return getAttributeEventListener(eventNames().keydownEvent);
